added plan, entertainment and date

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ p {line-height: 2}
 <div class="w3-display-container bgimg2">
   <div class="w3-display-middle w3-text-white w3-center">
     <h1 class="w3-jumbo">You Are Invited</h1><br>
-    <h2>Of course..</h2>
+    <h2>Of course...</h2>
   </div>
 </div>
 
@@ -75,6 +75,25 @@ p {line-height: 2}
         <p>Bd. Decebal 16, Chișinău</p>
       </div>
     </div>
+    <div class="w3-row">
+      <div class="w3-half">
+        <h2>Plan</h2>
+        <p>17:30 - Reception</p>
+        <p>18:00 - Marriage Registration</p>
+        <p>19:00 - First Meal</p>
+        <p>20:00 - First Wedding Dance</p>
+        <p>23:00 - Second Meal</p>
+        <p>00:30 - Wedding Cake</p>
+      </div>
+      <div class="w3-half">
+        <h2>Entertainment</h2>
+        <p>Wedding Host: <a href="https://artist.md/ro/artist/anna-danilcenco" target="_blank">Anna Danilcenco</a></p>
+        <p>Music: <a href="https://www.instagram.com/roman_zes_band/" target="_blank">Roman Zes Band</a></p>
+        <p>Dancers: <a href="https://www.facebook.com/showballetflash/" target="_blank">Show Ballet Flash</a></p>
+        <p>Extra fun: <a href="https://www.instagram.com/oglindaselfie.md/" target="_blank">Oglinda Selfie</a></p>
+      </div>
+    </div>
+    <div class="w3-hide-small" style="margin-bottom:32px"> </div>
     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10883.83314733969!2d28.8583998!3d47.001792!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x83fa69ace0855818!2sVilla%20Garden!5e0!3m2!1sro!2s!4v1642969857864!5m2!1sro!2s" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
   </div>
 </div>
@@ -84,7 +103,7 @@ p {line-height: 2}
   <h1>HOPE YOU CAN MAKE IT!</h1>
   <p>Please replace flowers with wine, children's books or toys*</p>
   <p>Books and toys will be donated to orphanages</p>
-  <p class="w3-large">Kindly Respond By April, 2022</p>
+  <p class="w3-large">Kindly Respond By 25th of June, 2022</p>
   <p class="w3-large">Natalia: +373 60 556 373</p>
   <p class="w3-large">Ilya: +373 69 954 562</p>
 </div>
